Fixed overlapping of high-scores on mobile/lower resolutions

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -91,7 +91,7 @@ html, div {
     border: none;
 }
 .end-button.highscore {
-    font-size: 26px;
+    font-size: 22px;
     text-align: left;
 }
 .end-button.score {
